--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="description" content="description">
 
-  <title>Новогодняя открытка средствами CSS3</title>
+  <title>открытка средствами CSS3</title>
   <link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css' />
 
   <link rel="stylesheet" media="screen" href="style.css">
@@ -30,6 +30,7 @@
 <div id="wrapper">
   <div id="container">
     <nav class="cl-effect-12">
+      <h2><a href="index3.html">Настюш,</a></h2>
     <h2><a href="index3.html">С Днём Рождения!</a></h2>
     <br />
     </nav>
