--- a/index3.html
+++ b/index3.html
@@ -19,9 +19,7 @@
 <body>
 <div class="container">
   <!-- Top Navigation -->
-  <div class="codrops-top clearfix">
-    <a class="codrops-icon codrops-icon-prev" href="index.html"><span>Назад</span></a>
-  </div>
+  <a href="index.html"><span>Назад</span></a>
   <header class="codrops-header">
     <h1>Дорогая Настюша! <span>хочу пожелать тебе:</span></h1>
   </header>
@@ -120,7 +118,7 @@
       <img src="img/12.jpg" alt="img12"/>
       <figcaption>
         <h2>Успехов в <span>учебе</span></h2>
-        <p>знания помогут тебе стать сильнее других</p>
+        <p>знания помогут делать мир лучше</p>
         <a href="#">View more</a>
       </figcaption>
     </figure>
